--- a/PDM-Project/PDM-Project/PDM-Project.csproj
+++ b/PDM-Project/PDM-Project/PDM-Project.csproj
@@ -49,6 +49,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Resources\Images\hightemperature.png" />
+	  <None Remove="Resources\Images\lowtemperature.png" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <MauiXaml Update="AboutPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
